--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -25,6 +25,10 @@
         <item name="cornerSizeTopLeft">8dp</item>
     </style>
 
+    <style name="customCircleImage">
+        <item name="cornerSize">50%</item>
+    </style>
+
     <style name="CustomTabItem" parent="TextAppearance.Design.Tab">
         <item name="android:textSize">12sp</item>
         <item name="textAllCaps">false</item>
