--- a/app/src/main/res/layout/item_rv_league.xml
+++ b/app/src/main/res/layout/item_rv_league.xml
@@ -20,8 +20,8 @@
             android:id="@+id/ivLeague"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:background="#EEEDED"
-            android:padding="16dp"
+            android:background="@color/white"
+            android:padding="8dp"
             android:src="@drawable/image_league"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
