--- a/app/src/main/res/layout/item_rv_past_match.xml
+++ b/app/src/main/res/layout/item_rv_past_match.xml
@@ -15,6 +15,7 @@
         android:layout_marginTop="16dp"
         android:text="Friday - February 25"
         android:textColor="@color/content"
+        android:textStyle="bold"
         android:textSize="16sp"
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +42,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="12dp"
                 android:ellipsize="marquee"
-                android:maxLines="1"
+                android:maxLines="2"
                 android:text="CHELSEA"
                 android:textColor="@color/content"
                 android:textSize="14sp"
@@ -105,7 +106,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="12dp"
                 android:ellipsize="marquee"
-                android:maxLines="1"
+                android:maxLines="2"
                 android:text="MAN UTD"
                 android:textAlignment="textEnd"
                 android:textColor="@color/content"
