--- a/app/src/main/res/layout/item_rv_upcoming_match.xml
+++ b/app/src/main/res/layout/item_rv_upcoming_match.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Friday - February 25"
+        android:textStyle="bold"
         android:textColor="@color/content"
         android:textSize="16sp"
         android:visibility="gone"
@@ -55,7 +56,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
                 android:ellipsize="marquee"
-                android:maxLines="1"
+                android:maxLines="2"
                 android:text="CHELSEA"
                 android:textColor="@color/content"
                 android:textSize="14sp"
@@ -92,7 +93,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
                 android:ellipsize="marquee"
-                android:maxLines="1"
+                android:maxLines="2"
                 android:text="MAN UTD"
                 android:textAlignment="textEnd"
                 android:textColor="@color/content"
